package interfaces;

public interface I_EmployeeList {
    void addEmployee();
    void updateEmployee();
    void removeEmployee();
    void searchEmployee();
    void calculatePayroll();
    void displayAll();
}
