package interfaces;

public interface I_Menu {
    void addItem(String item);
    void display();
    int getChoice();
}
